# prism-player

./: .gitignore  .roomodes  Cargo.toml  README.md  build.rs
src/: color.rs  main.rs  media.rs  video.rs
src/audio/: decoder.rs  mod.rs  player.rs
src/media/: clock.rs  decoder.rs  pipeline.rs
src/video/: decoder.rs  pipeline.rs  video.wgsl
