[package]
name = "prism-player"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/shadow3aaa/prism-player"

[dependencies]
bytes = "1.10.1"
ffmpeg-next = "8.0.0"
mimalloc = { version = "0.1.48", features = ["v3", "override"] }
ndarray = "0.16.1"
parking_lot = "0.12.4"
tessera-ui = "2.0.0"
tessera-ui-basic-components = "2.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
encase = { version = "0.11.2", features = ["glam"] }
glam = "0.30.7"
uuid = { version = "1.18.1", features = ["v4"] }
flume = "0.11.1"
clap = { version = "4.5.48", features = ["derive"] }
